--- a/src/styles/pages/team.module.scss
+++ b/src/styles/pages/team.module.scss
@@ -43,7 +43,7 @@
     c {
         font-style: italic; /* Make text cursive */
         font-size: 1.25rem; /* Set the font size to be the same as h2 */
-        font-weight: normal; /* Default weight for c, adjust as needed */
+        font-weight: bold; /* Default weight for c, adjust as needed */
     }
 }
 
